--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,9 @@
+// Colors
 $background-color: rgba(1, 22, 39, 1);
 $primary: rgba(255, 0, 34, 1);
 $secondary: rgba(65, 234, 212, 1);
 $text-color: rgba(253, 255, 252, 1);
 $color5: rgba(185, 19, 114, 1);
+
+// Fonts
+$font-family: "Montserrat", sans-serif;
