--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,5 @@
+@import "mixins/layout";
+@import "mixins/images";
 @import "variables";
 @import "container";
 @import "navbar";
@@ -8,7 +10,7 @@ html,
 body,
 #root {
 	height: 100%;
-	font-family: "Montserrat", sans-serif;
+	font-family: $font-family;
 	padding: 0;
 	margin: 0;
 	background-color: $background-color;
