--- a/src/assets/styles/_navbar.scss
+++ b/src/assets/styles/_navbar.scss
@@ -1,5 +1,7 @@
 .navbar {
-  padding: 0.5em 0rem;
+  $padding-top: 0.5em;
+
+  padding: $padding-top 0rem;
   display: flex;
 
   &-logo {
@@ -14,6 +16,50 @@
   &-burger {
     margin-left: auto;
     font-size: 1.7rem;
+    cursor: pointer;
+    user-select: none;
     @include flex-center();
+  }
+
+  &-nav {
+    display: flex;
+    right: 0;
+    width: 0;
+    height: calc(100vh + #{$padding-top});
+    position: absolute;
+    background-color: $secondary;
+    top: -$padding-top;
+    flex-direction: column;
+    transition: width 1s ease-in-out;
+
+    &.active {
+      width: 20%;
+
+      @media only screen and (max-width: 768px) {
+        width: 40%;
+      }
+    }
+
+    &.closed {
+      width: 0;
+    }
+
+    &-menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    &-item {
+      padding: 10px;
+      color: $background-color;
+    }
+
+    &-close {
+      cursor: pointer;
+      margin-top: 20px;
+      margin-right: 20px;
+      margin-left: auto;
+    }
   }
 }
