--- a/src/assets/styles/_navbar.scss
+++ b/src/assets/styles/_navbar.scss
@@ -1,10 +1,11 @@
 .navbar {
   $padding-top: 0.5em;
 
-  padding: $padding-top 0rem;
+  box-sizing: border-box;
   display: flex;
 
   &-logo {
+    padding-top: $padding-top;
     display: flex;
     height: 50px;
     img {
@@ -22,15 +23,16 @@
   }
 
   &-nav {
-    display: flex;
-    right: 0;
-    width: 0;
-    height: calc(100vh + #{$padding-top});
-    position: absolute;
+    height: 100%;
     background-color: $secondary;
-    top: -$padding-top;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    overflow-x: hidden;
+    transition: 1s;
+    display: flex;
     flex-direction: column;
-    transition: width 1s ease-in-out;
 
     &.active {
       width: 20%;
@@ -41,18 +43,30 @@
     }
 
     &.closed {
-      width: 0;
+      width: 0px;
     }
 
     &-menu {
-      list-style: none;
-      margin: 0;
-      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     &-item {
+      text-decoration: none;
       padding: 10px;
+      margin-bottom: 10px;
       color: $background-color;
+      font-size: 1.2rem;
+      font-weight: 700;
+      border: 1px solid $background-color;
+      border-radius: 3px;
+
+      &:hover {
+        background-color: lighten($background-color, 10%);
+        color: $text-color;
+      }
     }
 
     &-close {
